prestashop/02-deploy_prestashop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestashop-deployment
  labels:
    app: prestashop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prestashop
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prestashop
        tier: frontend
    spec:
      containers:
      - image: prestashop/prestashop
        name: prestashop
        ports:
        - containerPort: 80
          name: prestashop
        volumeMounts:
        - name: prestashop-pvc
          mountPath: /var/www/html
      volumes:
      - name: prestashop-pvc
        persistentVolumeClaim:
          claimName: pshop-data
