prestashop/03-ingress_route_pshop.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop-service
  labels:
    app: prestashop
spec:
  ports:
    - port: 80
  selector:
    app: prestashop
    tier: frontend
  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shopingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`shop.k8szf.local`)
    kind: Rule
    services:
    - name: prestashop-service
      port: 80
